--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
         <div class="page__content">
             <header class="header page__section">
                 <img
-                    src="./images/logo.svg"
+                    src="<%=require('../images/logo.svg')%>"
                     alt="Логотип проекта масто"
                     class="logo header__logo"
                 />
@@ -22,7 +22,7 @@
                 <section class="profile page__section">
                     <div
                         class="profile__image"
-                        style="background-image: url('./images/avatar.jpg')"
+                        style="background-image: url(<%=require('../images/avatar.jpg')%>)"
                     ></div>
                     <div class="profile__info">
                         <h1 class="profile__title">Жак-Ив Кусто</h1>
@@ -99,9 +99,6 @@
                 </div>
             </div>
         </div>
-        <script src="./src/cards.js"></script>
-        <script src="./src/index.js" defer></script>
-
         <template id="card-template">
             <li class="places__item card">
                 <img class="card__image" src="" alt="" />
