--- a/src/index.html
+++ b/src/index.html
@@ -45,21 +45,29 @@
                 <div class="popup__content">
                     <button type="button" class="popup__close"></button>
                     <h3 class="popup__title">Редактировать профиль</h3>
-                    <form class="popup__form" name="edit-profile">
+                    <form class="popup__form" name="edit-profile" novalidate>
                         <input
+                            id="name-input"
                             type="text"
                             name="name"
                             class="popup__input popup__input_type_name"
                             placeholder="Имя"
                             required
+                            minlength="2"
+                            maxlength="40"
                         />
+                        <span class="name-input-error form__input-error"></span>
                         <input
+                            id="job-input"
                             type="text"
                             name="description"
                             class="popup__input popup__input_type_description"
                             placeholder="Занятие"
                             required
+                            minlength="2"
+                            maxlength="200"
                         />
+                        <span class="job-input-error form__input-error"></span>
                         <button type="submit" class="button popup__button">
                             Сохранить
                         </button>
@@ -70,21 +78,27 @@
                 <div class="popup__content">
                     <button type="button" class="popup__close"></button>
                     <h3 class="popup__title">Новое место</h3>
-                    <form class="popup__form" name="new-place">
+                    <form class="popup__form" name="new-place" novalidate>
                         <input
+                            id="place-name-input"
                             type="text"
                             name="place-name"
                             class="popup__input popup__input_type_card-name"
                             placeholder="Название"
                             required
+                            minlength="2"
+                            maxlength="30"
                         />
+                        <span class="place-name-input-error form__input-error"></span>
                         <input
+                            id="link-input"
                             type="url"
                             name="link"
                             class="popup__input popup__input_type_url"
                             placeholder="Ссылка на картинку"
                             required
                         />
+                        <span class="link-input-error form__input-error"></span>
                         <button type="submit" class="button popup__button">
                             Сохранить
                         </button>
