--- a/src/index.html
+++ b/src/index.html
@@ -25,12 +25,12 @@
                         style="background-image: url(<%=require('../images/avatar.jpg')%>)"
                     ></div>
                     <div class="profile__info">
-                        <h1 class="profile__title">Жак-Ив Кусто</h1>
+                        <h1 class="profile__title"></h1>
                         <button
                             class="profile__edit-button"
                             type="button"
                         ></button>
-                        <p class="profile__description">Исследователь океана</p>
+                        <p class="profile__description"></p>
                     </div>
                     <button class="profile__add-button" type="button"></button>
                 </section>
@@ -125,7 +125,10 @@
                 <button type="button" class="card__delete-button"></button>
                 <div class="card__description">
                     <h2 class="card__title"></h2>
-                    <button type="button" class="card__like-button"></button>
+                    <div class="likes">
+                        <button type="button" class="card__like-button"></button>
+                        <div class="counter"></div> 
+                    </div>
                 </div>
             </li>
         </template>
