--- a/src/index.html
+++ b/src/index.html
@@ -20,10 +20,9 @@
             </header>
             <main class="content">
                 <section class="profile page__section">
-                    <div
-                        class="profile__image"
-                        style="background-image: url(<%=require('../images/avatar.jpg')%>)"
-                    ></div>
+                    <div>
+                        <img src="" alt="Аватар пользователя" class="profile__image">
+                    </div>
                     <div class="profile__info">
                         <h1 class="profile__title"></h1>
                         <button
@@ -41,6 +40,26 @@
             <footer class="footer page__section">
                 <p class="footer__copyright">© 2021 Mesto Russia</p>
             </footer>
+            <div class="popup popup_type_edit-avatar">
+                <div class="popup__content popup_avatar">
+                    <button type="button" class="popup__close"></button>
+                    <h3 class="popup__title">Обновить аватар</h3>
+                    <form class="popup__form" name="edit-avatar" novalidate>
+                        <input
+                            id="link-avatar-input"
+                            type="url"
+                            name="link-avatar"
+                            class="popup__input popup__input_type_url-avatar"
+                            placeholder="Ссылка на картинку"
+                            required
+                        />
+                        <span class="link-avatar-input-error form__input-error"></span>
+                        <button type="submit" class="button popup__button">
+                            Сохранить
+                        </button>
+                    </form>
+                </div>
+            </div>
             <div class="popup popup_type_edit">
                 <div class="popup__content">
                     <button type="button" class="popup__close"></button>
